--- a/src/index.html
+++ b/src/index.html
@@ -9,28 +9,54 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
-    <header class="header">
-      <aside class="page__menu menu" id="menu">
-        <a href="#" class="icon icon--close"></a>
-        <nav>
-          <ul>
-            <li>Галерея</li>
-            <li>Виставки та події</li>
-            <li>Про Нас</li>
-            <li>Контакти</li>
+    <header class="header" id="header">
+      <aside class="page__menu menu container" id="menu">
+        <nav class="menu__nav">
+          <a href="#" class="icon icon--close"></a>
+          <ul class="menu__ul">
+            <div class="menu__left">
+              <li class="menu__list">
+                <a href="#" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__list">
+                <a href="#" class="menu__link">Виставки та події</a>
+              </li>
+            </div>
+            <div class="menu__right">
+              <li class="menu__list">
+                <a href="#" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__list">
+                <a href="#" class="menu__link">Контакти</a>
+              </li>
+            </div>
           </ul>
         </nav>
-
         <div class="menu__line"></div>
-
         <section class="hours">
-          <ul>
-            <li>12:00 — 20:00 середа</li>
-            <li>12:00 — 20:00 четвер</li>
-            <li>12:00 — 20:00 п'ятниця</li>
-            <li>12:00 — 19:00 субота</li>
-            <li>12:00 — 19:00 неділя</li>
-          </ul>
+          <div class="hours__work">
+            <span class="hours__shedule">Графік роботи</span>
+            <ul class="hours__ul">
+              <li class="hours__list">
+                <span class="hours__time">12:00 — 20:00</span> середа
+              </li>
+              <li class="hours__list">
+                <span class="hours__time">12:00 — 20:00</span> четвер
+              </li>
+              <li class="hours__list">
+                <span class="hours__time">12:00 — 20:00</span> п'ятниця
+              </li>
+              <li class="hours__list">
+                <span class="hours__time">12:00 — 19:00</span> субота
+              </li>
+              <li class="hours__list">
+                <span class="hours__time">12:00 — 19:00</span> неділя
+              </li>
+            </ul>
+          </div>
+          <div class="hours__holiday">
+            <span class="hours__time">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+          </div>
         </section>
       </aside>
 
@@ -53,6 +79,241 @@
       </section>
     </header>
 
+    <main class="main">
+      <section class="events">
+        <h2 class="events__title container">Актуальні події</h2>
+
+        <article class="card container">
+          <img
+            src="./images/events/come-back.png"
+            alt="come-back"
+            class="card__img"
+          >
+          <div class="card__text">
+            <div class="card__place">
+              <span class="card__where">ВИСТАВКА</span>
+              <span class="card__when">26.08-29.11.2019</span>
+            </div>
+            <h3 class="card__title">
+              Йду і повертаюсь <div class="card__point"></div>
+            </h3>
+            <p class="card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </article>
+
+        <article class="card container">
+          <img
+            src="./images/events/dreams.png"
+            alt="dreams"
+            class="card__img"
+          >
+          <div class="card__text">
+            <div class="card__place">
+              <span class="card__where">ВИСТАВКА</span>
+              <span class="card__when">26.08-29.11.2019</span>
+            </div>
+            <h3 class="card__title">
+              І спогади і мрії <div class="card__point"></div>
+            </h3>
+            <p class="card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </article>
+
+        <article class="card card--full-screen">
+          <div class="card__text card__text--full-screen">
+            <div class="card__place card__place--full-screen">
+              <span class="card__where">ЛЕКЦІЯ</span>
+              <span class="card__when">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="card__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery">
+        <h2 class="gallery__title container">Галерея</h2>
+        <div class="gallery__slider">
+          <div class="slides">
+            <input
+              type="radio"
+              name="radio-btn"
+              class="radio1"
+            >
+            <input
+              type="radio"
+              name="radio-btn"
+              class="radio2"
+            >
+            <input
+              type="radio"
+              name="radio-btn"
+              class="radio3"
+            >
+            <input
+              type="radio"
+              name="radio-btn"
+              class="radio4"
+            >
+            <img
+              src="./images/gallery/woman.png"
+              alt="woman"
+              class="slide first gallery__top--left"
+            >
+            <img
+              src="./images/gallery/gooses.png"
+              alt="gooses"
+              class="slide gallery__top--right"
+            >
+            <img
+              src="./images/gallery/woman.png"
+              alt="woman"
+              class="slide gallery__top--left"
+            >
+            <img
+              src="./images/gallery/gooses.png"
+              alt="gooses"
+              class="slide gallery__top--right"
+            >
+          </div>
+          <div class="navigation-manual">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+          </div>
+        </div>
+
+        <div class="gallery__photos container">
+          <div class="gallery__top">
+            <img
+              src="./images/gallery/woman.png"
+              alt="woman"
+              class="gallery__top--left"
+            >
+            <img
+              src="./images/gallery/village.png"
+              alt="village.png"
+              class="gallery__top--right"
+            >
+          </div>
+          <div class="gallery__bottom">
+            <img
+              src="./images/gallery/children.png"
+              alt="children.png"
+              class="gallery__bottom--left"
+            >
+            <img
+              src="./images/gallery/sea.png"
+              alt="sea.png"
+              class="gallery__bottom--right"
+            >
+
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="form">
+          <h2 class="form__title">Підписка</h2>
+          <p class="form__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            action="submit"
+            onsubmit="this.reset(); return false;"
+            class="form__input container"
+          >
+            <input
+              type="email"
+              class="form__data"
+              placeholder="Email"
+              required
+            >
+            <button class="arrow arrow--red"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <aside class="footer__links">
+        <a href="#" class="icon icon--logo icon--footer"></a>
+        <div class="footer__social">
+          <a href="#" class="icon icon--facebook"></a>
+          <a href="#" class="icon icon--instagram"></a>
+        </div>
+      </aside>
+
+      <section class="hours hours--footer">
+        <div class="hours__work">
+          <span class="hours__shedule">Графік роботи</span>
+          <ul class="hours__ul">
+            <li class="hours__list">
+              <span class="hours__time">12:00 — 20:00</span> середа
+            </li>
+            <li class="hours__list">
+              <span class="hours__time">12:00 — 20:00</span> четвер
+            </li>
+            <li class="hours__list">
+              <span class="hours__time">12:00 — 20:00</span> п'ятниця
+            </li>
+            <li class="hours__list">
+              <span class="hours__time">12:00 — 19:00</span> субота
+            </li>
+            <li class="hours__list">
+              <span class="hours__time">12:00 — 19:00</span> неділя
+            </li>
+          </ul>
+        </div>
+
+        <div class="hours__holiday">
+          <span class="hours__time">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+      </section>
+
+      <section class="address">
+        <div class="address__title">Контакти:</div>
+        <p class="address__contacts">
+          вул. М. Грушевського, 6; <br>
+          Київ, 01001 <br>
+          тел. +38 (044) 278-13-57 <br>
+          факс +38 (044) 278-74-54 <br>
+          e-mail: info@namu.kiev.ua
+        </p>
+      </section>
+
+      <div class="move-top"><a href="#header" class="move-top"></a></div>
+
+      <div class="footer__line"></div>
+
+      <nav class="menu__nav menu__nav--footer">
+        <ul class="menu__ul menu__ul--footer">
+          <div class="menu__left menu__left--footer">
+            <li class="menu__list">
+              <a href="#" class="menu__link menu__link--footer">Галерея</a>
+            </li>
+            <li class="menu__list">
+              <a href="#" class="menu__link menu__link--footer">Виставки та події</a>
+            </li>
+          </div>
+
+          <div class="menu__right menu__right--footer">
+            <li class="menu__list">
+              <a href="#" class="menu__link menu__link--footer">Про Нас</a>
+            </li>
+            <li class="menu__list">
+              <a href="#" class="menu__link menu__link--footer">Контакти</a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+
+      <div class="rights">
+        <div class="rights__copy">Designed by Zhyriada Marina</div>
+        <div class="rights__design">Copyright © 2019. All Rights Reserved.</div>
+      </div>
+
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
