--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <span class="btn-text">Квитки</span>
             <span class="arrow"></span>
           </a>
-          <a href="#" class="header__events">Події</a>
+          <a href="#events" class="header__events">Події</a>
         </div>
       </div>
     </header>
@@ -50,7 +50,7 @@
                     <a href="#" class="nav__link">Про Нас</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Виставки та події</a>
+                    <a href="#events" class="nav__link">Виставки та події</a>
                   </li>
                   <li class="nav__item">
                     <a href="#" class="nav__link">Контакти</a>
@@ -91,6 +91,70 @@
         </div>
       </div>
     </aside>
+
+    <main class="main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+
+          <article class="events__card card">
+            <div class="card__img card__img-one"></div>
+            <div class="card__content">
+              <div class="card__content-top">
+                <h4 class="card__subtitle">Виставка</h4>
+                <p class="card__date">26.08-29.11.2019</p>
+              </div>
+              <div class="card__content-bottom">
+                <div class="card__title">
+                  <h3 class="card__title-text">Йду і повертаюсь</h3>
+                  <div class="card__title-square"></div>
+                </div>
+                <p class="card__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <article class="events__card card">
+            <div class="card__img card__img-two"></div>
+            <div class="card__content">
+              <div class="card__content-top">
+                <h4 class="card__subtitle">Виставка</h4>
+                <p class="card__date">26.08-29.11.2019</p>
+              </div>
+              <div class="card__content-bottom">
+                <div class="card__title">
+                  <h3 class="card__title-text">І спогади і мрії</h3>
+                  <div class="card__title-square"></div>
+                </div>
+                <p class="card__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <div class="events__bg"></div>
+
+        <div class="container">
+          <article class="events__card-bottom card-bottom">
+            <div class="card-bottom__top">
+              <h4 class="card-bottom__subtitle">Лекція</h4>
+              <p class="card-bottom__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="card-bottom__title">Від класицизму до <br> романтизму</h3>
+          </article>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+        </div>
+      </section>
+    </main>
 
 
     <script type="text/javascript" src="scripts/main.js"></script>
