--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
               <nav class="menu__nav nav">
                 <ul class="nav__items">
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Галерея</a>
+                    <a href="#gallery" class="nav__link">Галерея</a>
                   </li>
                   <li class="nav__item">
                     <a href="#" class="nav__link">Про Нас</a>
@@ -149,11 +149,27 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__images">
+            <div class="gallery__img gallery__img-1"></div>
+            <div class="gallery__img gallery__img-2"></div>
+            <div class="gallery__img gallery__img-3"></div>
+            <div class="gallery__img gallery__img-4"></div>
+          </div>
+
+          <ul class="gallery__dots">
+            <li class="gallery__dot"></li>
+            <li class="gallery__dot"></li>
+            <li class="gallery__dot"></li>
+            <li class="gallery__dot"></li>
+          </ul>
         </div>
       </section>
+
+      
     </main>
 
 
