--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namu</title>
-    <link
-      rel="shortcut icon"
-      href="./images/icons/NAMU-logo-s.svg"
-      type="image/x-icon"
-    >
+    <title>NAMU</title>
+    <link rel="icon" href="./images/icons/NAMU-logo-s.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
 
@@ -21,35 +18,27 @@
       <div class="header__img"></div>
       <div class="header__wrapper container">
         <div class="header__nav">
-          <a
-            href="#menu"
-            class="header__icon"
-          ></a>
+          <a href="#menu" class="header__icon"></a>
           <div class="header__logo-wrapper">
             <a href="#" class="header__link">
-              <img
-                src="./images/icons/NAMU-logo-s.svg"
-                alt="NAMU logo"
-                class="header__logo-s"
-              >
-              <img
-                src="./images/icons/NAMU-logo-l.svg"
-                alt="NAMU logo"
-                class="header__logo-l"
-              >
+              <img src="./images/icons/NAMU-logo-s.svg" alt="logo NAMU"
+              class="header__logo-s">
+              <img src="./images/icons/NAMU-logo-l.svg" alt="logo NAMU"
+              class="header__logo-l">
             </a>
           </div>
           <p class="header__icon-hidden"></p>
         </div>
 
-        <section class="Header__museum museum">
+        <section class="header__museum museum">
           <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <a href="#actuals" class="museum__link button">
             <p class="button__title">КВИТКИ</p>
             <img
               src="./images/icons/arrow-right-gray.svg"
-              alt="arrow right"
-              class="button__img">
+              alt="icon arrow"
+              class="button__img"
+            >
           </a>
           <a href="#actuals" class="museum__line">ПОДІЇ</a>
         </section>
@@ -67,7 +56,7 @@
               </li>
 
               <li class="nav__item">
-                <a href="#actuals" class="nav__link">Виставки та <br> події</a>
+                <a href="#actuals" class="nav__link ">Виставки та <br> події</a>
               </li>
             </ul>
             <ul class="nav__list">
@@ -85,31 +74,32 @@
             <p class="work-days__title">Графік роботи</p>
             <div class="work-days__date">
               <p class="work-days__item">
-                <span class="work-days__time">12:00 - 20:00</span>
-                <span class="work-days__day">середа</span>
+                <span class="work-days__time">12:00 — 20:00</span>
+                <span class="work-days_day">середа</span>
               </p>
               <p class="work-days__item">
-                <span class="work-days__time">12:00 - 20:00</span>
-                <span class="work-days__day">четвер</span>
+                <span class="work-days__time">12:00 — 20:00</span>
+                <span class="work-days_day">четвер</span>
               </p>
               <p class="work-days__item">
-                <span class="work-days__time">12:00 - 20:00</span>
-                <span class="work-days__day">п'ятниця</span>
+                <span class="work-days__time">12:00 — 20:00</span>
+                <span class="work-days_day">п’ятниця</span>
               </p>
               <p class="work-days__item">
-                <span class="work-days__time">11:00 - 19:00</span>
-                <span class="work-days__day">субота</span>
+                <span class="work-days__time">11:00 — 19:00</span>
+                <span class="work-days_day">субота</span>
               </p>
               <p class="work-days__item">
-                <span class="work-days__time">11:00 - 19:00</span>
-                <span class="work-days__day">неділя</span>
+                <span class="work-days__time">11:00 — 19:00</span>
+                <span class="work-days_day">неділя</span>
               </p>
             </div>
             <div class="work-days__description">
               <span class="work-days__time">Вихідні:</span>
               <span class="work-days__day">понеділок, вівторок
                 <br>
-                Каса припиняє роботу за 1 годину до закриття музею
+                Каса припиняє роботу за 1 годину
+                до закриття музею
               </span>
             </div>
           </div>
@@ -120,8 +110,8 @@
     <main class="main">
       <section class="actuals container" id="actuals">
         <h2 class="actuals__title">Актуальні події</h2>
-        <div class="actuals__slides">
-          <article class="actuals__slides slides">
+        <div class="actuals__slide">
+          <article class="actuals_slides slides">
             <img
               src="./images/actuals/actuals-1.svg"
               alt="actuals photo 1"
@@ -130,39 +120,49 @@
             <div class="slides__content">
               <div class="slides__subtitle">
                 <p class="slides__subtitle-name">ВИСТАВКА</p>
-                <p class="slides__subtitle-date">26.08 - 29.11.2019</p>
+                <p class="slides__subtitle-date">26.08-29.11.2019</p>
               </div>
+
               <div class="slides__wrapper">
                 <div class="slides__title-wrapper">
                   <h3 class="slides__title">Йду і повертаюсь</h3>
                   <p class="slides__square"></p>
                 </div>
+
                 <p class="slides__description">
-                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини 1980-1995 років.
                 </p>
+
               </div>
             </div>
           </article>
-          
-          <article class="actuals__slides slides">
+
+          <article class="actuals_slides slides">
             <img
               src="./images/actuals/actuals-2.svg"
               alt="actuals photo 2"
               class="slides__img"
             >
+
             <div class="slides__content">
               <div class="slides__subtitle">
                 <p class="slides__subtitle-name">ВИСТАВКА</p>
-                <p class="slides__subtitle-date">26.08 - 29.11.2019</p>
+                <p class="slides__subtitle-date">26.08-29.11.2019</p>
               </div>
+
               <div class="slides__wrapper">
                 <div class="slides__title-wrapper">
                   <h3 class="slides__title">І спогади і мрії</h3>
                   <p class="slides__square"></p>
                 </div>
+
                 <p class="slides__description">
-                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської  відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
                 </p>
+
               </div>
             </div>
           </article>
@@ -172,18 +172,10 @@
       <section class="classicism">
         <div class="classicism__content">
           <div class="classicism__data">
-            <p class="classicism__event">
-              ЛЕКЦІЯ
-            </p>
-            <p class="classicism__date">
-              26/08/2019 - 11:00
-            </p>
+            <p class="classicism__event">ЛЕКЦІЯ</p>
+            <p class="classicism__date">26/08/2019 - 11:00</p>
           </div>
-          <h2 class="classicism__title">
-            Від класицизму до
-            <br>
-            романтизму
-          </h2>
+          <h2 class="classicism__title">Від класицизму до <br> романтизму</h2>
         </div>
       </section>
 
@@ -195,20 +187,21 @@
               id="slide-1"
               src="./images/gallery/gallery-1.svg"
               alt="gallery photo 1"
-              class="gallery__slide gallery__slide--square"
+              class="gallery__slide
+                gallery__slide--square"
             >
             <img
               id="slide-2"
               src="./images/gallery/gallery-2.svg"
               alt="gallery photo 2"
-              class="gallery__slide gallery__slide--wide"
+              class="gallery__slide
+                gallery__slide--wide"
             >
             <img
               id="slide-3"
               src="./images/gallery/gallery-3.svg"
               alt="gallery photo 3"
-              class="
-                gallery__slide
+              class="gallery__slide
                 gallery__slide--small
                 gallery__slide--wide"
             >
@@ -216,8 +209,7 @@
               id="slide-4"
               src="./images/gallery/gallery-4.svg"
               alt="gallery photo 4"
-              class="
-                gallery__slide
+              class="gallery__slide
                 gallery__slide--small
                 gallery__slide--square"
             >
@@ -241,7 +233,7 @@
             <form
               action="#"
               class="subscribe__form"
-              onsubmit="this.reset(); return false"
+              onsubmit="this.reset(); return false;"
             >
               <input
                 type="email"
@@ -252,8 +244,9 @@
               <button class="subscribe__button">
                 <img
                   src="./images/icons/arrow-right-black.svg"
-                  alt="subscribe button arrow"
-                  class="button__img subscribe__img"
+                  alt="black arrow"
+                  class="button__img
+                    subscribe__img"
                 >
               </button>
             </form>
@@ -270,48 +263,47 @@
             href="https://www.facebook.com/namu.museum/"
             class="images__icon"
             target="_blank"
-          >
-          </a>
+          ></a>
           <a
             href="https://www.instagram.com/namu.museum/"
-            class="images__icon images__icon--inst"
+            class="images__icon
+              images__icon--instagram"
             target="_blank"
-          >
-          </a>
+          ></a>
         </div>
       </div>
 
       <div class="footer__wrapper">
         <div class="work-days footer__work-days">
-          <h2 class="work-days__title work-days__title--color-text ">Графік роботи</h2>
+          <h2 class="work-days__title work-days__title--color-text">Графік роботи</h2>
           <div class="work-days__date work-days__date--marg">
             <p class="work-days__item">
-              <span class="work-days__time work-days__time--color-text">середа</span>
-              <span class="work-days__day work-days__day--color-text">12:00 - 20:00</span>
+              <span class="work-days__time work-days__time--color-text">12:00 — 20:00</span>
+              <span class="work-days_day work-days__day--color-text">середа</span>
             </p>
             <p class="work-days__item">
-              <span class="work-days__time work-days__time--color-text">четвер</span>
-              <span class="work-days__day work-days__day--color-text">12:00 - 20:00</span>
+              <span class="work-days__time work-days__time--color-text">12:00 — 20:00</span>
+              <span class="work-days_day work-days__day--color-text">четвер</span>
             </p>
             <p class="work-days__item">
-              <span class="work-days__time work-days__time--color-text">п'ятниця</span>
-              <span class="work-days__day work-days__day--color-text">12:00 - 20:00</span>
+              <span class="work-days__time work-days__time--color-text">12:00 — 20:00</span>
+              <span class="work-days_day work-days__day--color-text">п’ятниця</span>
             </p>
             <p class="work-days__item">
-              <span class="work-days__time work-days__time--color-text">субота</span>
-              <span class="work-days__day work-days__day--color-text">11:00 - 19:00</span>
+              <span class="work-days__time work-days__time--color-text">11:00 — 19:00</span>
+              <span class="work-days_day work-days__day--color-text">субота</span>
             </p>
             <p class="work-days__item">
-              <span class="work-days__time work-days__time--color-text">неділя</span>
-              <span class="work-days__day work-days__day--color-text">11:00 - 19:00</span>
+              <span class="work-days__time work-days__time--color-text">11:00 — 19:00</span>
+              <span class="work-days_day work-days__day--color-text">неділя</span>
             </p>
           </div>
           <div class="work-days__description">
             <span class="work-days__time work-days__time--color-text">Вихідні:</span>
-            <span class="work-days__day work-days__day--color-text">
-              понеділок, вівторок
+            <span class="work-days__day work-days__day--color-text">понеділок, вівторок
               <br>
-              Каса припиняє роботу за 1 годину до закриття музею
+              Каса припиняє роботу за 1 годину
+              до закриття музею
             </span>
           </div>
         </div>
@@ -320,30 +312,15 @@
           <h2 class="contacts__title">Контакти:</h2>
           <div class="contacts__content">
             <a
-            href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B/@50.4494431,30.5281844,17z/data=!4m15!1m8!3m7!1s0x40d4ce52445a8315:0x5e30ef474eddac89!2z0YPQuy4g0JzQuNGF0LDQuNC70LAg0JPRgNGD0YjQtdCy0YHQutC-0LPQviwgNiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!3b1!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?authuser=0&entry=ttu"
-            class="contacts__link"
-            target="_blank"
+              href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+              class="contacts__link"
+              target="_blank"
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
-            <a
-              href="tel:+38044278-357"
-              class="contacts__link"
-            >
-            тел. +38 (044) 278-13-57
-            </a>
-            <a
-            href="tel:+380442787454"
-            class="contacts__link"
-            >
-              факс +38 (044) 278-74-54
-            </a>
-            <a
-              href="mailto:info@namu.kiev.ua"
-              class="contacts__link"
-            >
-              e-mail: info@namu.kiev.ua
-            </a>
+            <a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a>
+            <a href="tel:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
           </div>
           <a href="#" class="contacts__item-abs"></a>
         </div>
